--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-icons": "^4.11.0",
 		"react-redux": "^8.1.3",
 		"react-scripts": "5.0.1",
+		"tailwind-merge": "^2.0.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -41,5 +42,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"tailwindcss": "^3.3.5"
 	}
 }
